# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

---- 0.9 ---

2007-01-25  Piotr Ożarowski
	* Fix more bad cases in upgrade from old DB function

2007-01-24  Piotr Ożarowski
	* Fetch from Amazon function recognizes more posters now

2007-01-16  Vasco Nunes
	* Czech translation updated (thanks to Ondra 'Kepi' Kudlík)

2007-01-15  Piotr Ożarowski
	* AnimeDB movie plugin updated

2007-01-11  Piotr Ożarowski
	* Fix possible memory leak
	* Select first movie by default
	* Remove Excel mime types from CSV import plugin
	* Fix list of fields to import

2007-01-10  Vasco Nunes
	* PTGate movie plugin updated

---- 0.9-rc3 ---

2007-01-09  Piotr Ożarowski
	* Catch some more bad cases while upgrading database
	* Switch to sqlite if psycopg2 or MySQLdb module are not available
	* Fix upgrading vol/col loan data
	* Version changed to 0.9-rc3

2007-01-08  Piotr Ożarowski
	* Ignore bad entries in loans table
	* Don't modify old database while upgrading

2007-01-08  Vasco Nunes
	* Italian translation updated (Thanks to Diego)

---- 0.9-rc2 ---

2007-01-07  Piotr Ożarowski
	* Copy title if original title is not available in FDb.pl movie plugin
	* griffith-export-template manpage removed

2007-01-06  Piotr Ożarowski
	* Clear movie details if no movie is selected
	* Speed up Griffith's startup a little bit

2007-01-05  Piotr Ożarowski
	* Copyright years updated
	* Version changed to 0.9-rc2
	* E-mails removed from changelog
	* TODO updated

2007-01-05  Vasco Nunes
	* Updated portuguese translation

2007-01-04  Vasco Nunes
	* Updated Swedish translation (thanks to Daniel Nylander)
	* Updated Czech translation and CSFD movie pluging (thanks to Blondak)
	* Updated Portuguese Brazilian translation (thanks to Fábio Nogueira)
	* Fixed win32 gtk locale issue
	* Fixed win32 default system font directory detection (for use in preferences)
	* Updated French translation (thanks to Pierre-Luc Lévi)